--- a/index.html
+++ b/index.html
@@ -1,34 +1,82 @@
-test My GitHub Page YM14
-YM14 est un protocole de cryptage polymorphe.
+<!--
+   index.html
+   
+   Copyright 2014  <yves.mercadier@laposte.net>
+   
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 2 of the License, or
+   (at your option) any later version.
+   
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+   
+   You should have received a copy of the GNU General Public License
+   along with this program; if not, write to the Free Software
+   Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+   MA 02110-1301, USA.
+   
+   
+-->
 
-Le message est crypté de façon polymorphique ce qui signifie que pour le même message clair
- le message crypté peut prendre différente forme. Dans le cas du protocole YM14 il y a une infinité de
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
+<head>
+	<title>Protocole de cryptage polymorphe : YM14</title>
+	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+   <link rel="stylesheet" href="monstyle.css">
+</head>
+
+<body>
+
+<h1>PRESENTATION</h1>
+<p>YM14 est un protocole de cryptage polymorphe.</p>
+
+<p>Le message est crypté de façon polymorphique ce qui signifie que pour le même message clair
+ le message crypté peut prendre différente forme. Dans le cas du protocole YM14 il y a une quasi infinité de
  forme pour le  message crypté. Ce qui lui confère une résistance importante face à la cryptanalyse.
+</p>
+<h1>UTILISATION</h1>
 
-UTILISATION
-
-Vous pouvez écrire le message à crypter dans le fichier "message.ym14" ou, 
+<p>Vous pouvez écrire le message à crypter dans le fichier "message.ym14" ou, 
 si ce fichier n'est pas dans le répertoire de travail de l'émission il vous sera demandé de saisir un message.
+</p>
 
-Pour émettre un message crypté, vous devez avoir au moins les fichiers YM14Emission et le fichier annuaire.ym14 dans un même répertoire
-et permettre l'écriture sur le fichier messageCrypte.ym14.
+<p>Pour émettre un message crypté, vous devez avoir le fichier YM14Emission avec les droit d'execution et permettre l'écriture sur le fichier messageCrypte.ym14.
+</p>
 
-Pour décrypter un message, vous devez avoir au moins les fichiers YM14Reception,le fichier messageCrypte.ym14 et
- le fichier annuaire.ym14 dans un même répertoire.
+<p>Pour décrypter un message, vous devez avoir le fichier YM14Reception et le fichier messageCrypte.ym14 dans un même répertoire.
+</p>
 
-Les caractères autorisés pour l'écriture du message sont:
+<p>Les caractères autorisés pour l'écriture du message sont:
 " abcdefghijklmnopqrstuvwxyz0123456789.,?-ABCDEFGHIJKLMNOPQRSTUVWXYZéèà"
+</p>
 
-Pour cette version de test il y a uniquement trois utilisateurs bob, alice et anonymous.
+<p>Pour cette version de test il y a uniquement trois utilisateurs bob, alice et anonymous.</p>
 
 Les pass phrases de ces trois utilisateurs sont
-	pour alice     "jesuisuneblonde"
-	pour bob       "jesuisungeek"
-	pour anonymous ""
-
-Ce protocole est en back tout back. Les pass phrases sont là pour éviter tout attaque par dictionnaire (elle ne sont pas limitées en taille).
+	<ul><li>pour alice     "jesuisuneblonde"</li>
+		<li>	pour bob       "jesuisungeek"</li>
+		<li>	pour anonymous ""</li>
+	</ul>
+	
+<p>Ce protocole est en back tout back. Les pass phrases sont là pour éviter toute attaque par dictionnaire (elle ne sont pas limitées en taille).
 L'annuaire est une autorité de référence permettant la vérification des identités émettrice et réceptrice.
+ Il est composé des condensats de chaque utilisateur.
 L'annuaire en vérifiant les identités bloque toute tentative d'attaque du type man in the middle.
+</p>
+Vous avez deux possibilités  :
+<ul>
+	<li>soit vous placez l'annuaire dans le dossier d'utilisation au quel cas vous n'avez pas besoin de connexion internet</li>
+	<li>soit vous laissez l'accés à l'url suivant http://ym001.github.io/YM14/annuaire.ym14 pour une lecture en ligne de l'annuaire.</li>
+</ul>
 
 Les fichiers sont compilés pour une architecture linux 64 bits type ubuntu/débian.
 
+</body>
+
+</html>
