--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ Vous avez deux possibilités  :
 	<li>soit vous laissez l'accés à l'url suivant http://ym001.github.io/YM14/annuaire.ym14 pour une lecture en ligne de l'annuaire.</li>
 </ul>
 
-Les fichiers sont compilés pour une architecture linux 64 bits type ubuntu/débian.
-
+<p>Les fichiers sont compilés pour une architecture linux 64 bits type ubuntu/débian.</p>
+<p>Vous pouvez maintenant avoir des communications sécures avec vos interlocuteurs.</p>
 </body>
 
 </html>
