--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Vous devez aussi laisser une connexion sur le fichier "http://ym001.github.io/YM
 " abcdefghijklmnopqrstuvwxyz0123456789.,?-ABCDEFGHIJKLMNOPQRSTUVWXYZéèà"
 </p>
 
-<p>Pour cette version d'évaluation accessible sur github, il y a uniquement trois utilisateurs bob, alice et anonymous.</p>
+<p>Pour cette version d'évaluation accessible sur <a href="https://github.com/ym001/YM14">github</a>, il y a uniquement trois utilisateurs bob, alice et anonymous.</p>
 
 Les pass phrases de ces trois utilisateurs sont
 	<ul>
