--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
 <p>Le message est crypté de façon polymorphique ce qui signifie que pour le même message clair
  le message crypté peut prendre différente forme. Dans le cas du protocole YM14 il y a une quasi infinité de
- forme (l'entropie des messages est maximale) pour un  message crypté. Ce qui lui confère une résistance importante face à la cryptanalyse. L'entropie du méssage complet est maximale.
+ forme (l'entropie des messages est maximale) pour un  message crypté, de plus le même message sera crypté différemment 
+ à chaque cryptage. Ce qui confère une résistance importante face à la cryptanalyse.
 </p>
 
 <h1>UTILISATION</h1>
@@ -89,7 +90,7 @@ Vous avez deux possibilités  :
 <p>D'un point de vue théorique ce système de cryptanalyse repose sur le principe du code à masque jettable.
 Ce qui est intéressant ici, c’est la méthode de transmission du masque jettable qui reste bien sur secrette !!!</p>
 
-<p>Vous pouvez maintenant avoir des communications sécures avec vos interlocuteurs.</p>
+<p>Vous pouvez maintenant avec YM14 avoir des communications sécures avec vos interlocuteurs.</p>
 </body>
 
 </html>
